<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title_left"
            style="@style/TitleStyleRight"
            android:text="@string/record_camera_back" />

        <TextView
            android:id="@+id/title_text"
            style="@style/TitleStyleCenter"
            android:text="@string/record_preview_title" >
        </TextView>

        <TextView
            android:id="@+id/title_right"
            style="@style/TitleStyleRight"
            android:text="@string/record_camera_next" >
        </TextView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/record_layout"
        android:layout_width="match_parent"
        android:layout_height="200dip" >

        <com.yixia.camera.demo.ui.widget.VideoView
            android:id="@+id/record_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/record_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/imageview_content_description"
            android:src="@drawable/record_play" />

        <com.yixia.camera.demo.ui.record.views.FrameImageView
            android:id="@+id/record_theme_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#2c2c2c"
        android:gravity="center_vertical"
        android:paddingBottom="5dip"
        android:orientation="horizontal" >

        <CheckedTextView
            android:id="@+id/record_video_theme"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:drawableTop="@drawable/record_theme_selector"
            android:gravity="center_horizontal"
            android:text="@string/record_preview_theme"
            android:textColor="@color/record_text_color_selector"
            android:textSize="14sp" />
        <!-- 占位 -->

        <View
            android:layout_width="0dip"
            android:layout_height="1dip"
            android:layout_weight="3" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <com.yixia.camera.demo.ui.record.views.ThemeRadioButton
                android:id="@+id/record_preview_theme_original"
                style="@style/RecordThemeStyle"
                android:checked="true"
                android:drawableTop="@drawable/record_theme_original"
                android:text="@string/record_preview_theme_original" />

            <com.yixia.camera.demo.ui.record.views.ThemeRadioButton
                android:id="@+id/record_preview_theme_news"
                style="@style/RecordThemeStyle"
                android:drawableTop="@drawable/record_theme_news"
                android:text="@string/record_preview_theme_news" />

            <com.yixia.camera.demo.ui.record.views.ThemeRadioButton
                android:id="@+id/record_preview_theme_goddess"
                style="@style/RecordThemeStyle"
                android:drawableTop="@drawable/record_theme_goddess"
                android:text="@string/record_preview_theme_goddess" />

            <com.yixia.camera.demo.ui.record.views.ThemeRadioButton
                android:id="@+id/record_preview_theme_recording"
                style="@style/RecordThemeStyle"
                android:drawableTop="@drawable/record_theme_recording"
                android:text="@string/record_preview_theme_recording" />
            
            <com.yixia.camera.demo.ui.record.views.ThemeRadioButton
                android:id="@+id/record_preview_theme_bsmall"
                style="@style/RecordThemeStyle"
                android:drawableTop="@drawable/record_theme_bsmall"
                android:text="@string/record_preview_theme_bsmall" />
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>