<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title_left"
            style="@style/TitleStyleRight"
            android:drawableLeft="@drawable/record_back"
            android:drawablePadding="5dip"
            android:text="@string/record_camera_back" />

        <TextView
            android:id="@+id/title_text"
            style="@style/TitleStyleCenter"
            android:text="@string/record_camera_title" >
        </TextView>

        <TextView
            android:id="@+id/title_right"
            style="@style/TitleStyleRight"
            android:text="@string/record_camera_next" >
        </TextView>
    </LinearLayout>

    <com.yixia.camera.demo.ui.record.views.ProgressView
        android:id="@+id/record_progress"
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!--
             <SurfaceView
            android:id="@+id/record_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        -->

        <com.yixia.camera.view.CameraNdkView
            android:id="@+id/record_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/record_layout"
            android:layout_width="match_parent"
            android:layout_height="200dip" >

            <ImageView
                android:id="@+id/record_tips_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/imageview_content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/record_tips_press" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/record_layout"
            android:background="@color/black"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dip"
                android:paddingRight="10dip" >

                <TextView
                    android:id="@+id/record_import"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/record_import_selector"
                    android:gravity="center_horizontal"
                    android:text="@string/record_camera_import"
                    android:textColor="@color/record_text_color_selector"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dip"
                    android:layout_height="1dip"
                    android:layout_weight="1" />

                <CheckedTextView
                    android:id="@+id/record_delay"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/record_delay_selector"
                    android:gravity="center_horizontal"
                    android:text="@string/record_camera_delay"
                    android:textColor="@color/record_text_color_selector"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <CheckedTextView
                    android:id="@+id/record_filter"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/record_filter_selector"
                    android:gravity="center_horizontal"
                    android:text="@string/record_camera_filter"
                    android:textColor="@color/record_text_color_selector"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dip"
                    android:layout_height="1dip"
                    android:layout_weight="1" />

                <CheckedTextView
                    android:id="@+id/record_delete"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/record_delete_selector"
                    android:enabled="false"
                    android:gravity="center_horizontal"
                    android:text="@string/record_camera_back_delete"
                    android:textColor="@color/record_text_color_selector"
                    android:textSize="14sp" />
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/record_filter_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="#292929"
                android:paddingBottom="5dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip"
                android:scrollbars="none"
                android:visibility="gone" >

                <RadioGroup
                    android:id="@+id/record_filter_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </RadioGroup>
            </HorizontalScrollView>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>